--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Incogn1tto.github.io/hogwarts",
+  "homepage": "https://github.com/VitaliyOl/Ice-Creame",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /hogwarts/"
+    "build": "parcel build src/*.html --public-url /Ice-Creame/"
   },
   "repository": {
     "type": "git",
